# cohortfs-ceph

./: .gitignore  .gitmodules  .mailmap  .organizationmap  CMakeLists.txt  COPYING  CodingStyle  INSTALL  INSTALL-NOTES  Makefile.am  README_LTTNG  SubmittingPatches  ceph.spec.in  configure.ac
src/: CMakeLists.txt  CMakeLists.txt.orig  ITest.cc  Makefile-env.am  Makefile.am  btrfs_ioc_test.c  ceph-run  ceph.in  ceph.in.cmake  ceph.setpath.py  ceph_common.sh  ceph_fuse.cc  ceph_mds.cc  ceph_mon.cc  ceph_osd.cc  ceph_syn.cc  cephfs.cc  fetch_config  init-ceph.in  init-rbdmap  lib_ceph_osd.cc  libceph.cc  libcephfs.cc  libosd.cc  libosd.h  librados-config.cc  mkcephfs.in  multi-dump.sh  osd_lib.cc  osdmaptool.cc  rados.cc  rados_sync.cc  rados_sync.h  radosacl.cc  rbd.cc  scratchtool.c  valgrind.supp  vstart.sh
src/arch/: intel.c
src/auth/: Auth.h  AuthAuthorizeHandler.cc  AuthAuthorizeHandler.h  AuthClientHandler.cc  AuthClientHandler.h  AuthMethodList.cc  AuthMethodList.h  AuthServiceHandler.cc  AuthServiceHandler.h  AuthSessionHandler.cc  AuthSessionHandler.h  Crypto.cc  Crypto.h  KeyRing.cc  KeyRing.h  RotatingKeyRing.cc  RotatingKeyRing.h  scheme.txt
src/brag/: README.md
src/client/: CMakeLists.txt  CapClient.h  Capability.cc  Capability.h  Client.cc  Client.h  ClientSnapRealm.h  Dentry.cc  Dentry.h  Dir.h  DirRegMap.cc  DirRegMap.h  DirStripe.cc  DirStripe.h  Fh.h  Inode.cc  Inode.h  InodeCache.cc  InodeCache.h  MDSRegMap.cc  MDSRegMap.h  Makefile.am  MessageFactory.cc  MessageFactory.h  MetaRequest.cc  MetaRequest.h  MetaSession.h  ObjecterWriteback.h  ReaddirWorker.cc  ReaddirWorker.h  SnapRealm.h  SnapRealmMap.cc  SnapRealmMap.h  SyntheticClient.cc  SyntheticClient.h  Trace.cc  Trace.h  barrier.cc  barrier.h  fuse_ll.cc  (+5 more)
src/cls/: CMakeLists.txt  Makefile.am
src/cohort/: CohortOSD.cc  CohortOSD.h  CohortOSDMap.cc  CohortOSDMap.h  CohortPlaceSystem.cc  CohortPlaceSystem.h  CohortVolume.cc  CohortVolume.h  ErasureCPlacer.cc  ErasureCPlacer.h  OSDVol.cc  OSDVol.h  StripedPlacer.cc  StripedPlacer.h  VolLog.cc  VolLog.h  erasure.cc  erasure.h
src/common/: AsyncReserver.h  BackTrace.cc  BackTrace.h  CMakeLists.txt  Clock.cc  Clock.h  Cond.h  ConfUtils.cc  ConfUtils.h  DecayCounter.cc  DecayCounter.h  Finisher.cc  Finisher.h  Formatter.cc  Formatter.h  FunQueue.h  HeartbeatMap.cc  HeartbeatMap.h  LogClient.cc  LogClient.h  LogEntry.cc  LogEntry.h  Logger.cc  Makefile.am  MemoryModel.cc  MemoryModel.h  MultiCallback.h  Mutex.h  OutputDataSocket.cc  OutputDataSocket.h  PrebufferedStreambuf.cc  PrebufferedStreambuf.h  Preforker.h  PrioritizedQueue.h  ProfLogger.cc  RWLock.h  RefCountedObj.cc  RefCountedObj.h  Semaphore.h  SloppyCRCMap.cc  (+93 more)
src/crush/: CrushTester.cc  CrushTester.h  CrushWrapper.cc  CrushWrapper.h  builder.c  crush.c  crush.h  grammar.h  hash.c  hash.h  mapper.c  mapper.h
src/doc/: Commitdir.txt  anchortable.txt  caching.txt  header.txt  lazy_posix.txt  mds_locks.txt  modeline.txt
src/erasure-code/: CMakeLists.txt  ErasureCode.cc  ErasureCode.h  ErasureCodeInterface.h  ErasureCodePlugin.cc  ErasureCodePlugin.h  Makefile.am
src/global/: CDS_Env.h  CMakeLists.txt  global_init.cc  global_init.h  pidfile.cc  pidfile.h  signal_handler.cc  signal_handler.h
src/gtest/: CMakeLists.txt
src/hyperdex/: Makefile.am  ceph-hdexco  ceph-hdexco.in  ceph-hdexd  ceph-hdexd.in
src/include/: AssocVector.hpp  CompatSet.h  Context.h  Distribution.h  FSBAllocator.h  Spinlock.h  assert.h  atomic.h  bitmapper.h  blobhash.h  boost_filesystem.h  buffer.h  buffer_int.h  buffer_list.h  buffer_ptr.h  buffer_raw.h  buffer_xio.h  byteorder.h  ceph_assert.h  ceph_features.h  ceph_frag.h  ceph_fs.h  ceph_hash.h  ceph_strings.cc  ceph_time.h  cmp.h  cohort_error.h  compat.h  config-h.in.cmake  dlist.h  elist.h  encoding.h  error.h  filepath.h  frag.h  int_types.h  intarith.h  interval_set.h  linux_fiemap.h  lru.h  (+20 more)
src/java/: Makefile.am  README  build.xml
src/jobs/: example  runjobsample
src/json_spirit/: CMakeLists.txt  json_spirit.h  json_spirit_error_position.h  json_spirit_reader.cpp  json_spirit_reader.h  json_spirit_reader_template.h  json_spirit_stream_reader.h  json_spirit_utils.h  json_spirit_value.h  json_spirit_writer.cpp  json_spirit_writer.h  json_spirit_writer_options.h  json_spirit_writer_template.h
src/key_value_store/: cls_kvs.cc  key_value_structure.h  kv_flat_btree_async.cc  kv_flat_btree_async.h  kvs_arg_types.h
src/libmds/: ceph_mds.h  libmds.cc
src/libosd/: Context.cc  Context.h  Dispatcher.cc  Dispatcher.h  Doxyfile  Messengers.cc  Messengers.h  Objecter.cc  Objecter.h  ceph_osd.h  ceph_osd_proxy.h  ceph_osd_remote.h  libosd.cc  proxy.cc  remote.cc
src/librados/: AioCompletionImpl.h  CMakeLists.txt  IoCtxImpl-sss.cc  IoCtxImpl-sss.h  IoCtxImpl.cc  IoCtxImpl.h  RadosClient.cc  RadosClient.h  librados.cc
src/librbd/: AioCompletion.cc  AioCompletion.h  AioRequest.cc  AioRequest.h  CMakeLists.txt  Image.cc  Image.h  ImageCtx.cc  ImageCtx.h  LibrbdWriteback.cc  LibrbdWriteback.h  Makefile.am  WatchCtx.cc  WatchCtx.h  internal.cc  internal.h  librbd.cc  parent_types.h
src/log/: Entry.h  EntryQueue.h  Log.cc  Log.h  LttngLog.h  LttngStream.cc  LttngStream.h  SubsystemMap.h  test.cc
src/mds/: Anchor.cc  Anchor.h  AnchorClient.cc  AnchorClient.h  AnchorServer.cc  AnchorServer.h  CDentry.cc  CDentry.h  CDir.cc  CDir.h  CDirFrag.cc  CDirFrag.h  CDirPlacement.cc  CDirPlacement.h  CDirStripe.cc  CDirStripe.h  CInode.cc  CInode.h  CMakeLists.txt  CStripe.cc  CStripe.h  Cache.cc  Cache.h  CapObject.cc  CapObject.h  Capability.cc  Capability.h  Dentry.h  Dir.cc  Dir.h  DirStorage.h  Dumper.cc  Dumper.h  FSObj.cc  FSObj.h  InoTable.cc  InoTable.h  Inode.cc  Inode.h  InodeContainer.cc  (+73 more)
src/messages/: MAuth.h  MAuthReply.h  MBackfillReserve.h  MCacheExpire.h  MClientCapRelease.h  MClientCaps.h  MClientLease.h  MClientReconnect.h  MClientReply.h  MClientRequest.h  MClientRequestForward.h  MClientSession.h  MCommandReply.h  MConnect.h  MDataPing.h  MDentryLink.h  MDentryUnlink.h  MDirUpdate.h  MDiscover.h  MDiscoverReply.h  MExportCaps.h  MExportCapsAck.h  (+85 more)
(+1133 files in other folders)
